--- a/Licences/THANKS
+++ b/Licences/THANKS
@@ -1,5 +1,5 @@
 ******************************************************************************
-***                            MG-APPS THANKS file.                        ***
+***                            MG-APP THANKS file.                        ***
 ******************************************************************************
 
 We would like to thank the IGS, CNES, and GFZ for providing 
