--- a/Licences/THANKS
+++ b/Licences/THANKS
@@ -1,19 +1,33 @@
-******************************************************************************
-***                            MG-APP THANKS file.                        ***
-******************************************************************************
+**************************************************
+***************MG-APP THANKS file****************
+**************************************************
 
-We would like to thank the IGS, CNES, and GFZ for providing 
-GNSS data and orbit and clock products. Furthermore, we would 
-like to thank Natural Resources Canada for its latest CSRS-PPP 
-online application. In addition, we are grateful to Dashuai Chai, 
-Yulong Ge, Chuanbao Zhao, Xiaolong Mi and Feng Zhou for their 
-valuable suggestions.
+We would like to thank the IGS, CNES, and GFZ for 
+providing GNSS observations and products. 
+Furthermore, we would like to thank Natural Resources 
+Canada for its latest CSRS-PPP online application. 
+We also appreciate Alfred Leick and Steve Hilla 
+for their suggestions on improving the manuscript. 
+In addition, we are grateful to Dashuai Chai, Yulong 
+Ge, Chuanbao Zhao, Xiaolong Mi, Shengliang Wang, Ming 
+Gao and Feng Zhou for their valuable suggestions. 
+This work was funded by the National Natural Science 
+Foundation of China (Nos. 41574015, 41974008, 
+41621091, and 41774017) and the National Key Research
+Programme of China Collaborative Precision 
+Positioning Project (No. 2016YFB0501900).
+We express our sincere gratitude to some software 
+listed below.
 
 Software:
 Qt: <www.qt.io>
 Eigen: <eigen.tuxfamily.org>
 RTKLIB: <www.rtklib.com>
 QCustomPlot: <www.qcustomplot.com>
+
+Any suggestions, corrections, and comments on MG-APP
+sincerely welcomed contact with us.
+
 
 
 
